修复IDEA 和sonarqube静态扫描出来的问题